--- a/packages/cli/templates/quickstart/jquery/package.json
+++ b/packages/cli/templates/quickstart/jquery/package.json
@@ -5,8 +5,6 @@
   "keywords": [],
   "author": "",
   "dependencies": {},
-  "devDependencies": {
-    "lite-server": "^2.4.0"
-  },
+  "devDependencies": {},
   "repository": {}
 }
