--- a/package.json
+++ b/package.json
@@ -93,7 +93,12 @@
 		"micromatch": "^4.0.8",
 		"trim-newlines": "^3.0.1",
 		"parse-path": "^5.0.0",
-		"http-cache-semantics": "^4.1.1"
+		"http-cache-semantics": "^4.1.1",
+		"send": "^0.19.0",
+		"serve-static": "^1.16.0",
+		"axios": "^0.28.0",
+		"tough-cookie": "^4.1.3",
+		"cookie": "^0.7.0"
 	},
 	"workspaces": [
 		"packages/*"
