--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
 		"browser-sync": "^3.0.2",
-		"coveralls": "^3.1.1",
+		"coveralls-next": "^4.2.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
