--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -97,7 +97,7 @@
     "@types/jasmine": "^5.1.4",
     "@types/node": "^22.5.5",
     "browser-sync": "^3.0.2",
-    "coveralls": "^3.1.1",
+    "coveralls-next": "^4.2.1",
     "jasmine": "^5.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "lite-server": "^2.6.1",
