--- a/package.json
+++ b/package.json
@@ -95,9 +95,7 @@
 		"parse-path": "^5.0.0",
 		"http-cache-semantics": "^4.1.1",
 		"send": "^0.19.0",
-		"serve-static": "^1.16.0",
-		"axios": "^0.28.0",
-		"cookie": "^0.7.0"
+		"axios": "^0.28.0"
 	},
 	"workspaces": [
 		"packages/*"
