--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-deploy:
-    if: $(yamlGenerateDeploymentScript) == true
+    if: ${{ vars.PAGES_DEPLOYMENT == 'Always' || (vars.PAGES_DEPLOYMENT == 'Default' && github.ref_name == github.event.repository.default_branch) }}
     runs-on: ubuntu-latest
 
     permissions:
