--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,10 +12,10 @@
   "author": "Infragistics",
   "license": "MIT",
   "dependencies": {
-    "@inquirer/prompts": "^5.4.0",
+    "@inquirer/prompts": "~5.4.0",
     "chalk": "^2.3.2",
     "glob": "^7.1.2",
-    "through2": "^4.0.2",
+    "through2": "^2.0.3",
     "typescript": "~5.5.4"
   },
   "devDependencies": {
