--- a/packages/cli/templates/angular/ig-ts/projects/empty/files/angular.json
+++ b/packages/cli/templates/angular/ig-ts/projects/empty/files/angular.json
@@ -15,7 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/$(dash-name)",
             "index": "src/index.html",
