--- a/tsconfig-pack.json
+++ b/tsconfig-pack.json
@@ -3,7 +3,8 @@
 		"target": "es6",
 		"module": "commonjs",
 		"declaration": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"skipLibCheck": true,
 	},
 	"exclude": [
 		"./spec",
