--- a/packages/igx-templates/igx-ts/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/package.json
@@ -26,6 +26,13 @@
     "tslib": "~2.3.0",
     "zone.js": "~0.15.0"
   },
+  "overrides": {
+    "igniteui-angular-charts": {
+        "@angular/core": "^19.0.0",
+        "@angular/common": "^19.0.0",
+        "@angular/compiler": "^19.0.0"
+    }
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
     "@angular-eslint/builder": "~19.0.0-alpha.1",
