--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -21,7 +21,7 @@
     "@angular-devkit/core": "^19.0.0",
     "@angular-devkit/schematics": "^19.0.0",
     "@igniteui/angular-templates": "~19.0.1431",
-    "@igniteui/cli-core": "~^14.3.1",
+    "@igniteui/cli-core": "~14.3.1",
     "@schematics/angular": "~19.0.0",
     "rxjs": "^7.8.1"
   },
