--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "19.0.1432-beta.0",
+  "version": "19.0.1432",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -20,16 +20,16 @@
   "dependencies": {
     "@angular-devkit/core": "^19.0.0",
     "@angular-devkit/schematics": "^19.0.0",
-    "@igniteui/angular-templates": "~19.0.1432-beta.0",
-    "@igniteui/cli-core": "~14.3.2-beta.0",
+    "@igniteui/angular-templates": "~19.0.1432",
+    "@igniteui/cli-core": "~14.3.2",
     "@schematics/angular": "~19.0.0",
-    "rxjs": "^7.8.1",
-    "minimatch": "^10.0.1"
+    "minimatch": "^10.0.1",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@types/jasmine": "^5.1.4",
+    "@types/minimatch": "^5.1.2",
     "@types/node": "^22.5.5",
-	"@types/minimatch": "^5.1.2",
     "jasmine": "^5.3.0",
     "typescript": "~5.6.2"
   },
