--- a/packages/igx-templates/igx-ts-legacy/projects/_base_with_home/files/__dot__github/workflows/github-pages.yml
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base_with_home/files/__dot__github/workflows/github-pages.yml
@@ -35,12 +35,12 @@ jobs:
     - name: Build project with dynamic base-href
       run: npm run build -- --base-href "/${{ github.event.repository.name }}/"
     - name: Update Resource Paths
-      run: find ./dist/${{ env.PROJECT_NAME }} -type f -name '*main*.js' -exec sed -i -e "s|/assets|/${{ github.event.repository.name }}/assets|g" -e "s|url('/assets|url('/${{ github.event.repository.name }}/assets|g" {} +
+      run: find ./dist/${{ env.PROJECT_NAME }}/browser -type f -name '*main*.js' -exec sed -i -e "s|/assets|/${{ github.event.repository.name }}/assets|g" -e "s|url('/assets|url('/${{ github.event.repository.name }}/assets|g" {} +
     - name: SPA routing handling
-      run: cp ./dist/${{ env.PROJECT_NAME }}/index.html ./dist/${{ env.PROJECT_NAME }}/404.html
+      run: cp ./dist/${{ env.PROJECT_NAME }}/browser/index.html ./dist/${{ env.PROJECT_NAME }}/browser/404.html
     - name: Upload build artifact to GitHub Pages
       uses: actions/upload-pages-artifact@v1
       with:
-        path: ./dist/${{ env.PROJECT_NAME }}
+        path: ./dist/${{ env.PROJECT_NAME }}/browser
     - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v1
