--- a/package.json
+++ b/package.json
@@ -82,18 +82,7 @@
 		"ts-node": "^10.9.2",
 		"tslint": "^5.11.0",
 		"typescript": "~5.6.2",
-		"typescript-json-schema": "^0.65.1",
-		"parse-url": "^8.1.0",
-		"braces": "^3.0.3",
-		"highlight.js": "^10.4.1",
-		"mem": "^4.0.0",
-		"tar": "^6.2.1",
-		"micromatch": "^4.0.8",
-		"trim-newlines": "^3.0.1",
-		"parse-path": "^5.0.0",
-		"http-cache-semantics": "^4.1.1",
-		"send": "^0.19.0",
-		"axios": "^0.28.0"
+		"typescript-json-schema": "^0.65.1"
 	},
 	"workspaces": [
 		"packages/*"
