--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
 		"exclude": [
 			"**/*.d.ts",
 			"output/",
-			"packages/cli/templates/quickstart/",
 			"packages/cli/templates/**/files/",
 			"packages/igx-templates/"
 		],
@@ -77,23 +76,13 @@
 		"jasmine-spec-reporter": "^7.0.0",
 		"lerna": "^8.1.9",
 		"lerna-changelog": "^2.2.0",
-		"lite-server": "^2.6.1",
 		"nyc": "^17.0.0",
 		"resolve": "^1.22.8",
 		"source-map-support": "^0.5.21",
 		"ts-node": "^10.9.2",
 		"tslint": "^5.11.0",
 		"typescript": "~5.6.2",
-		"typescript-json-schema": "^0.65.1",
-		"parse-url": "^8.1.0",
-		"braces": "^3.0.3",
-		"highlight.js": "^10.4.1",
-		"mem": "^4.0.0",
-		"tar": "^6.2.1",
-		"micromatch": "^4.0.8",
-		"trim-newlines": "^3.0.1",
-		"parse-path": "^5.0.0",
-		"http-cache-semantics": "^4.1.1"
+		"typescript-json-schema": "^0.65.1"
 	},
 	"workspaces": [
 		"packages/*"
