--- a/packages/igx-templates/igx-ts/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/package.json
@@ -35,11 +35,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-eslint/builder": "~19.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin": "~19.0.0-alpha.1",
-    "@angular-eslint/eslint-plugin-template": "~19.0.0-alpha.1",
-    "@angular-eslint/schematics": "~19.0.0-alpha.1",
-    "@angular-eslint/template-parser": "~19.0.0-alpha.1",
+    "@angular-eslint/builder": "~19.0.0",
+    "@angular-eslint/eslint-plugin": "~19.0.0",
+    "@angular-eslint/eslint-plugin-template": "~19.0.0",
+    "@angular-eslint/schematics": "~19.0.0",
+    "@angular-eslint/template-parser": "~19.0.0",
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@types/jasmine": "~5.1.1",
