--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -31,7 +31,9 @@ jobs:
         # cache: 'npm' # enable after committing lock file from first install
     - run: npm i # replace with 'npm ci' after committing lock file from first install
     - name: Update Router Navigation
-      run: find ./src -type f -name "*.ts" -exec sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" {} \;
+      run: |
+        find ./src -type f -name "*.ts" -exec sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" {} \;
+        find ./ -type f -name "rollup.config.mjs" -exec sed -i "s|navigateFallback: '/index.html'|navigateFallback: 'index.html'|g" {} \;
     - run: npm run build
     - name: Update base href in index.html
       run: |
