--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "tsc && concurrently -k -r \"tsc --watch\" \"wds\"",
-    "build": "rimraf dist && tsc && node --max-old-space-size=4096 node_modules/rollup/dist/bin/rollup -c rollup.config.mjs",
+    "build": "rimraf dist && tsc && node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "lint": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore",
     "test": "tsc --project tsconfig.test.json && wtr"
@@ -27,15 +27,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
-    "@open-wc/building-rollup": "^2.2.1",
     "@open-wc/testing": "^4.0.0",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@web/dev-server": "^0.4.6",
-    "@web/rollup-plugin-html": "^2.3.0",
-    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "@web/test-runner": "^0.18.0",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^8.2.2",
@@ -44,12 +39,13 @@
     "eslint-plugin-lit": "^1.8.2",
     "igniteui-cli": "^13.1.5",
     "rimraf": "^5.0.5",
-    "rollup": "^2.79.0",
-    "rollup-plugin-copy-assets": "^2.0.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-workbox": "^8.1.0",
     "source-map": "^0.7.4",
     "tslib": "^2.6.2",
-    "@types/mocha": "^10.0.6"
+    "@types/mocha": "^10.0.6",
+    "vite": "^6.0.7",
+    "vite-plugin-pwa": "^0.21.0",
+    "vite-plugin-static-copy": "^2.1.0",
+    "vite-plugin-babel": "^1.3.0",
+    "vite-plugin-html": "^3.2.2"
   }
 }
