--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/tsconfig.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "esnext",
+    "target": "es2021",
+    "module": "es2020",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "lib": [
-      "es2017",
+      "es2023",
       "dom",
       "dom.iterable"
     ],
