--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
@@ -42,10 +42,8 @@
     "source-map": "^0.7.4",
     "tslib": "^2.8.1",
     "@types/mocha": "^10.0.6",
-    "vite": "^6.0.7",
+    "vite": "^6.0.10",
     "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-static-copy": "^2.2.0",
-    "vite-plugin-babel": "^1.3.0",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
