--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-lit": "^1.8.2",
     "igniteui-cli": "^13.1.5",
     "rimraf": "^5.0.10",
+    "rollup-plugin-terser": "^7.0.2",
     "source-map": "^0.7.4",
     "tslib": "^2.8.1",
     "@types/mocha": "^10.0.6",
