--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.7.1",
+  "version": "14.8.0-beta.0",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -76,8 +76,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~20.1.1471",
-    "@igniteui/cli-core": "~14.7.1",
+    "@igniteui/angular-templates": "~21.0.1480-beta.0",
+    "@igniteui/cli-core": "~14.8.0-beta.0",
     "@inquirer/prompts": "^7.9.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
@@ -89,14 +89,14 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^19.0.0",
-    "@angular-devkit/schematics": "^19.0.0",
-    "@schematics/angular": "~19.0.0",
+    "@angular-devkit/core": "^21.0.0",
+    "@angular-devkit/schematics": "^21.0.0",
+    "@schematics/angular": "~21.0.0",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^22.5.5",
     "browser-sync": "^3.0.3",
     "coveralls-next": "^4.2.1",
-    "jasmine": "^5.3.0",
+    "jasmine": "^5.12.0",
     "jasmine-spec-reporter": "^7.0.0",
     "nyc": "^17.0.0",
     "rxjs": "^7.8.1",
