--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/cli-core",
-  "version": "14.7.1",
+  "version": "14.8.0-beta.0",
   "description": "Base types and functionality for Ignite UI CLI",
   "repository": {
     "type": "git",
@@ -16,10 +16,10 @@
     "chalk": "^2.3.2",
     "glob": "^11.0.0",
     "through2": "^2.0.3",
-    "typescript": "~5.5.4"
+    "typescript": "~5.9.3"
   },
   "devDependencies": {
-    "@angular-devkit/schematics": "^19.0.0",
+    "@angular-devkit/schematics": "^21.0.0",
     "@inquirer/type": "^3.0.0"
   }
 }
