--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "20.1.1471",
+  "version": "21.0.1480-beta.0",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -18,11 +18,11 @@
   "license": "MIT",
   "schematics": "./src/collection.json",
   "dependencies": {
-    "@angular-devkit/core": "^19.0.0",
-    "@angular-devkit/schematics": "^19.0.0",
-    "@igniteui/angular-templates": "~20.1.1471",
-    "@igniteui/cli-core": "~14.7.1",
-    "@schematics/angular": "~19.0.0",
+    "@angular-devkit/core": "^21.0.0",
+    "@angular-devkit/schematics": "^21.0.0",
+    "@igniteui/angular-templates": "~21.0.1480-beta.0",
+    "@igniteui/cli-core": "~14.8.0-beta.0",
+    "@schematics/angular": "~21.0.0",
     "minimatch": "^10.0.1",
     "rxjs": "^7.8.1"
   },
@@ -30,8 +30,8 @@
     "@types/jasmine": "^5.1.4",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22.5.5",
-    "jasmine": "^5.3.0",
-    "typescript": "~5.6.2"
+    "jasmine": "^5.12.0",
+    "typescript": "~5.9.3"
   },
   "ng-update": {
     "migrations": "./src/migrations/migration-collection.json"
